--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>msg</title>
     <link rel="stylesheet" href="../dist/style.css">
     <style type="text/css">@charset "UTF-8";[ng\:cloak],[ng-cloak],[data-ng-cloak],[x-ng-cloak],.ng-cloak,.x-ng-cloak,.ng-hide:not(.ng-hide-animate){display:none !important;}ng\:form{display:block;}.ng-animate-shim{visibility:hidden;}.ng-anchor{position:absolute;}</style>
+
+    <base href="/">
 </head>
 <body class="container">
 
